--- a/06_DOM/01.html
+++ b/06_DOM/01.html
@@ -3,13 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Dom Learning</title>
+    <style>
+    .bg-black{
+        background-color: #212121;
+        color: #fff;
+    }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading">
+<body class="bg-black">
+    <div >
+        <h1 id ="title" class="heading">
             DOM learning on Chai aur code
+            <span style="display: none;">test text</span>
         </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nihil expedita, facilis laboriosam ab excepturi, minus quo recusandae nulla necessitatibus quisquam odio adipisci accusamus! Numquam adipisci a quo debitis consequuntur?</p>
+        <h2>Lorem ipsum dolor sit </h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nihil expedita.</p>
+        <input type="password" name="" id="">
+        <!-- innerText just give the text that is visible to user.
+        textContent give all the content or text that is hidden from the user. 
+        innerHTML give html content also inside that class
+        querySelectorAll : Gives all the query on the page e.g. h1 from the page
+        -->
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
 </body>
 </html>
