--- a/08_events/03.html
+++ b/08_events/03.html
@@ -7,9 +7,16 @@
 </head>
 <body>
     <h1>Chai aur JavaScript</h1>
+    <button id="start">Start</button>
     <button id="stop">Stop</button>
 </body>
 <script>
+    const sayDate = function(str){
+        console.log(str,Date.now());
+        
+    }
+   const intervalId = setInterval(sayDate, 1000, "hi")
 
+   clearInterval(intervalId)
 </script>
 </html>
