--- a/12_Projects_Practice/18_Sticky_NavBar/index.html
+++ b/12_Projects_Practice/18_Sticky_NavBar/index.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sticky Navbar</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
-<script src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <h1>Sticky Navbar Example</h1>
+    </div>
+    <div class="navbar">
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Services</a>
+      <a href="">Portfolio</a>
+      <a href="">Contact</a>
+    </div>
+    <div class="content">
+      <div class="home-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus pariatur
+        dicta quod deserunt. Earum iusto nesciunt asperiores ullam consectetur
+        consequuntur, architecto itaque possimus ea? Aliquid quisquam odit
+        repellendus assumenda laborum animi doloribus labore facilis ad fugiat
+        recusandae ab, deserunt eaque saepe provident, possimus, autem quas
+        consequatur eius ipsam officia quibusdam ducimus magnam. Animi eligendi
+        unde in dolore dicta nulla odio reprehenderit amet id. Dolore optio
+        rerum consequatur hic alias quam magni vitae eaque. Ex provident quaerat
+        eligendi illum architecto earum nihil autem! Magni odit ex quas aperiam,
+        architecto amet saepe, assumenda nam enim repellat sapiente quisquam
+        facilis quo dolor.
+      <div class="about-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus pariatur
+        dicta quod deserunt. Earum iusto nesciunt asperiores ullam consectetur
+        consequuntur, architecto itaque possimus ea? Aliquid quisquam odit
+        repellendus assumenda laborum animi doloribus labore facilis ad fugiat
+        recusandae ab, deserunt eaque saepe provident, possimus, autem quas
+        consequatur eius ipsam officia quibusdam ducimus magnam. Animi eligendi
+        unde in dolore dicta nulla odio reprehenderit amet id. Dolore optio
+        rerum consequatur hic alias quam magni vitae eaque. Ex provident quaerat
+        eligendi illum architecto earum nihil autem! Magni odit ex quas aperiam,
+        architecto amet saepe, assumenda nam enim repellat sapiente quisquam
+        facilis quo dolor.</div>
+      <div class="service-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus pariatur
+        dicta quod deserunt. Earum iusto nesciunt asperiores ullam consectetur
+        consequuntur, architecto itaque possimus ea? Aliquid quisquam odit
+        repellendus assumenda laborum animi doloribus labore facilis ad fugiat
+        recusandae ab, deserunt eaque saepe provident, possimus, autem quas
+        consequatur eius ipsam officia quibusdam ducimus magnam. Animi eligendi
+        unde in dolore dicta nulla odio reprehenderit amet id. Dolore optio
+        rerum consequatur hic alias quam magni vitae eaque. Ex provident quaerat
+        eligendi illum architecto earum nihil autem! Magni odit ex quas aperiam,
+        architecto amet saepe, assumenda nam enim repellat sapiente quisquam
+        facilis quo dolor.</div>
+      <div class="portfolio-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus pariatur
+        dicta quod deserunt. Earum iusto nesciunt asperiores ullam consectetur
+        consequuntur, architecto itaque possimus ea? Aliquid quisquam odit
+        repellendus assumenda laborum animi doloribus labore facilis ad fugiat
+        recusandae ab, deserunt eaque saepe provident, possimus, autem quas
+        consequatur eius ipsam officia quibusdam ducimus magnam. Animi eligendi
+        unde in dolore dicta nulla odio reprehenderit amet id. Dolore optio
+        rerum consequatur hic alias quam magni vitae eaque. Ex provident quaerat
+        eligendi illum architecto earum nihil autem! Magni odit ex quas aperiam,
+        architecto amet saepe, assumenda nam enim repellat sapiente quisquam
+        facilis quo dolor.</div>
+      <div class="contact-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus pariatur
+        dicta quod deserunt. Earum iusto nesciunt asperiores ullam consectetur
+        consequuntur, architecto itaque possimus ea? Aliquid quisquam odit
+        repellendus assumenda laborum animi doloribus labore facilis ad fugiat
+        recusandae ab, deserunt eaque saepe provident, possimus, autem quas
+        consequatur eius ipsam officia quibusdam ducimus magnam. Animi eligendi
+        unde in dolore dicta nulla odio reprehenderit amet id. Dolore optio
+        rerum consequatur hic alias quam magni vitae eaque. Ex provident quaerat
+        eligendi illum architecto earum nihil autem! Magni odit ex quas aperiam,
+        architecto amet saepe, assumenda nam enim repellat sapiente quisquam
+        facilis quo dolor.</div>
+    </div>
+  </body>
+  <script src="script.js"></script>
 </html>
