--- a/12_Projects_Practice/19_RandomImageGeneration/index.html
+++ b/12_Projects_Practice/19_RandomImageGeneration/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Image Generator</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Random Image Generator</h1>
     <div class="images-wrapper"></div>
-    <button class="load-more-images">Load Next 5 Images</button>
-</body>
-<script src="script.js"></script>
+    <div class="next-btn">
+      <button class="load-more-images">Load Next 5 Images</button>
+    </div>
+  </body>
+  <script src="script.js"></script>
 </html>
